--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "conghaiso",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Một thư viện giúp bạn tính tổng của 2 số bất kỳ Đơn giản, dễ dùng và nhẹ",
   "main": "cong.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/thanhtamdc/conghaiso.git"
+    "url": "https://github.com/thanhtamdc/conghaiso.git"
   },
   "dependencies": {
     "are-arrays": "^1.0.0",
