--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "conghaiso",
-  "version": "1.0.3",
+  "name": "conghaisott",
+  "version": "1.0.0",
   "description": "Một thư viện giúp bạn tính tổng của 2 số bất kỳ Đơn giản, dễ dùng và nhẹ",
   "main": "cong.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thanhtamdc/conghaiso.git"
+    "url": "git+https://github.com/thanhtamdc/conghaiso-tt.git"
   },
   "dependencies": {
     "are-arrays": "^1.0.0",
@@ -18,8 +18,13 @@
   },
   "keywords": [
     "sum",
+    "add",
     "cong"
   ],
   "author": "DCTT",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/thanhtamdc/conghaiso-tt/issues"
+  },
+  "homepage": "https://github.com/thanhtamdc/conghaiso-tt#readme"
 }
